--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,13 +1,10 @@
 name: Deploy to GitHub Pages
 
 on:
-  # Trigger the workflow every time you push to the `main` branch
   push:
     branches: [main]
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Allow this job to clone the repo and create a page deployment
 permissions:
   contents: read
   pages: write
@@ -20,11 +17,17 @@ jobs:
       - name: Checkout your repository
         uses: actions/checkout@v3
 
+      - name: Update actions/upload-artifact to v4
+        uses: actions/upload-artifact@v4
+        with:
+          path: dist
+
       - name: Install, build, and upload your site
         uses: withastro/action@v1
         with:
-          node-version: 18 # Specify your Node.js version
-          package-manager: npm # Explicitly use npm
+          node-version: 18
+          package-manager: npm
+          path: dist
 
       - name: Verify build output
         run: ls -R dist
@@ -39,8 +42,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
-        continue-on-error: true
-
-      - name: Check deployment status
-        if: ${{ steps.deployment.outcome != 'success' }}
-        run: echo "Deployment failed! Check the logs for errors."
