--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@astrojs/netlify": "^6.1.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/solid-js": "^5.0.5",
     "@astrojs/tailwind": "^5.1.5",
     "@iconify-json/solar": "^1.2.2",
     "@tailwindcss/vite": "^4.0.0",
     "astro": "^5.1.9",
     "astro-icon": "^1.1.5",
     "hamburgers": "^1.2.1",
+    "solid-js": "^1.9.5",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
+    "@iconify-icon/solid": "^2.3.0",
     "@tailwindcss/typography": "^0.5.16",
     "sass-embedded": "^1.83.4"
   }
